crates/apogee-zipatch/tests/ui/safe_path_extern.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/ui/safe_path_extern.rs:6:13
  |
6 |     let _ = SafePath(std::path::PathBuf::new());
  |             ^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/seam.rs
  |
  | pub struct SafePath(PathBuf);
  |                     ^^^^^^^ private field
